<resources>
    <string name="app_name">Chronos</string>

    <string name="global_text_item_list"> • %s</string>
    <string name="global_change">Изменить</string>
    <string name="global_transfer">Перенести</string>
    <string name="global_cancel">Отмена</string>
    <string name="global_choice">Выбрать</string>
    <string name="global_create">Создать</string>
    <string name="global_remove">Удалить</string>
    <string name="global_calendar">Календарь</string>
    <string name="global_remove_category">Удалить категорию \"%1$s\"?</string>
    <string name="global_add">Добавить</string>
    <string name="global_start">Старт</string>
    <string name="global_stop">Стоп</string>
    <string name="global_resume">Продолжить</string>
    <string name="global_hours">Часы</string>
    <string name="global_minutes">Минуты</string>
    <string name="global_name">Название</string>
    <string name="global_chronometer_text">%1$s : %2$s</string>
    <string name="global_full_time_text">%1$s:%2$s:%3$s</string>
    <string name="global_track_time_format">%1$sч %2$s</string>
    <string name="global_track_time_hours_format">%1$sч</string>
    <string name="global_diagram_time_format">%1$s / 24</string>
    <string name="global_diagram_time_free_format">%1$s / %2$s</string>

    <string name="global_body">Тело</string>
    <string name="global_mind">Разум</string>
    <string name="global_emotions">Эмоции</string>
    <string name="global_consciousness">Сознание</string>
    <string name="symbol_arrow">➝</string>
    <string name="common_error_message">Упс, что-то пошло не так</string>

    <string name="last_tracks">Последние:</string>
    <string name="parent_category">Родительская категория</string>
    <string name="empty_data">Данных нет</string>
    <string name="stop_watcher">Секундомер</string>

    <string name="prev_parent_category">Предыдущая: %1$s</string>
    <string name="prev_name">Предыдущее название: %1$s</string>
    <string name="from_date">с %1$s</string>
    <string name="to_date">по %1$s</string>
    <string name="unknown_category">Unknown</string>

    <string name="hour_plus">+1ч</string>
    <string name="hour_minus">-1ч</string>
    <string name="minutes_10_plus">+10</string>
    <string name="minutes_10_minus">-10</string>
</resources>
